# TransferKitty

./: .clang-format  .gitignore  format-files.sh
TransferKitty.xcworkspace/: contents.xcworkspacedata
TransferKitty/TransferKitty ShareExtension iOS/: Info.plist  TKViewController.h  TKViewController.mm
TransferKitty/TransferKitty ShareExtension macOS/: Info.plist  TKViewController.h  TKViewController.mm  TransferKitty.entitlements
TransferKitty/TransferKitty Shared/: BluetoothCommunicator.h  BluetoothCommunicator.m  Nuklear.metal  Renderer.h  Renderer.m  ShaderTypes.h  Shaders.metal  TKApp.h  TKApp.mm  TKBluetoothCommunicator.h  TKBluetoothCommunicator.m  TKBluetoothCommunicator.mm  TKBlurHash.cpp  TKBlurHash.h  TKConfig.h  TKDebug.h  TKDebug.mm  TKDefaultUIState.h  TKDeviceInfoUtilities.h  TKDeviceInfoUtilities.mm  TKExtensionContextUtils.h  TKExtensionContextUtils.mm  TKFileSaver.h  TKFileSaver.mm  TKFormat.h  TKITexture.h  TKIUIState.h  TKImageBuffer.cpp  TKImageBuffer.h  TKMacOSViewController.h  TKMacOSViewController.mm  TKNuklearConfig.h  TKNuklearMetalTexture.h  TKNuklearMetalTexture.mm  TKNuklearMetalViewDelegate.h  TKNuklearMetalViewDelegate.mm  TKOptional.h  TKSpan.h  TKStringUtilities.h  TKStringUtilities.mm  (+4 more)
TransferKitty/TransferKitty iOS/: AppDelegate.h  AppDelegate.m  GameViewController.h  main.m  (+4 more)
TransferKitty/TransferKitty iOS ShareExtension/: Info.plist  ShareViewController.h  ShareViewController.m  TKShareViewController.h  TKShareViewController.mm
TransferKittyAndroid/: settings.gradle
TransferKittyAndroid/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
TransferKittyAndroid/app/src/main/cpp/apemode/: EzriAppGL.cpp  EzriAppGL.h  JNIUtil.cpp  JNIUtil.h  NuklearGL.cpp  TKAppGL.cpp  TKAppGL.h  TKGL.h  TKNuklearRendererGL.cpp  TKNuklearRendererGL.h
TransferKittyAndroid/app/src/main/cpp/gameworks/include/NV/: NvPlatformGL.h  NvStopWatch.h  NvTokenizer.h
TransferKittyAndroid/app/src/main/cpp/gameworks/include/NsFoundation/: NsArray.h
TransferKittyAndroid/app/src/main/cpp/gameworks/include/NvAppBase/: NvAppContext.h  NvFramerateCounter.h  NvInputHandler_CameraFly.h  NvInputTransformer.h  NvPlatformContext.h  TKAppBase.h
TransferKittyAndroid/app/src/main/cpp/gameworks/include/NvAppBase/gl/: TKAppContextGL.h
TransferKittyAndroid/app/src/main/cpp/gameworks/include/NvVkUtil/: vkfnptrinline.h
TransferKittyAndroid/app/src/main/cpp/gameworks/include/NvVkUtil/nosdk/vulkan/: vk_platform.h
TransferKittyAndroid/app/src/main/cpp/gameworks/src/NsFoundation/windows/: NsWindowsSocket.cpp
TransferKittyAndroid/app/src/main/cpp/gameworks/src/NvAppBase/: NvFoundationInit.h  NvFramerateCounter.cpp  NvInputHandler_CameraFly.cpp  NvInputTransformer.cpp
TransferKittyAndroid/app/src/main/cpp/gameworks/src/NvAppBase/android/: EngineAndroid.h  MainAndroid.cpp  NvAndroidNativeAppGlue.h  NvFBOPool.h  NvThreadAnd.h  TKAppContextEGL.h
TransferKittyAndroid/app/src/main/cpp/gameworks/src/NvAppBase/glfw/: InputCallbacksGLFW.cpp  NvGLFWPlatformContext.h
TransferKittyAndroid/app/src/main/cpp/gameworks/src/NvAppBase/linux/: MainLinux.cpp
TransferKittyAndroid/app/src/main/cpp/gameworks/src/NvAppBase/win/: NvThreadWin.h
TransferKittyAndroid/app/src/main/cpp/gameworks/src/NvEGLUtil/: NvEGLUtil.h
TransferKittyAndroid/app/src/main/cpp/gameworks/src/NvGamepad/android/: NvGamepadAndroid.cpp
TransferKittyAndroid/app/src/main/cpp/gameworks/src/NvVkUtil/: NvAppWrapperContextVK.h  NvSampleAppVK.cpp  vkfnptrinline.c
TransferKittyAndroid/app/src/main/cpp/gameworks/src/main/cpp/gameworks/include/NV/: NvMatrix.h
TransferKittyAndroid/app/src/main/cpp/gameworks/src/main/cpp/gameworks/include/NsFoundation/: NsSocket.h
TransferKittyAndroid/app/src/main/cpp/gameworks/src/main/cpp/gameworks/include/NvAppBase/: NvAppBase.h  NvCPUTimer.h  NvInputHandler.h  NvKeyboard.h  NvSampleApp.h  NvThread.h  TKAppBase.h  TKSampleApp.h
TransferKittyAndroid/app/src/main/cpp/gameworks/src/main/cpp/gameworks/include/NvAppBase/gl/: NvAppContextGL.h  NvSampleAppGL.h  TKSampleAppGL.h
TransferKittyAndroid/app/src/main/cpp/gameworks/src/main/cpp/gameworks/include/NvFoundation/: NvPreprocessor.h
TransferKittyAndroid/app/src/main/cpp/gameworks/src/main/cpp/gameworks/include/NvVkUtil/: NvSampleAppVK.h  vk_platform.h  vulkannv.h
TransferKittyAndroid/app/src/main/cpp/gameworks/src/main/cpp/gameworks/include/NvVkUtil/nosdk/vulkan/: vulkan.h
TransferKittyAndroid/app/src/main/cpp/gameworks/src/main/cpp/gameworks/src/NsFoundation/unix/: NsUnixSocket.cpp
TransferKittyAndroid/app/src/main/cpp/gameworks/src/main/cpp/gameworks/src/NvAppBase/: NvFoundationInit.cpp  NvSampleApp.cpp  TKAppBase.cpp  TKSampleApp.cpp
TransferKittyAndroid/app/src/main/cpp/gameworks/src/main/cpp/gameworks/src/NvAppBase/android/: EngineAndroid.cpp  EngineAndroid.h  MainAndroid.cpp  NvAndroidNativeAppGlue.c  NvAndroidWinUtil.cpp  NvAndroidWinUtil.h  NvEGLAppContext.h  NvFBOPool.cpp  NvThreadAnd.cpp
TransferKittyAndroid/app/src/main/cpp/gameworks/src/main/cpp/gameworks/src/NvAppBase/gl/: NvAppContextGL.cpp  NvSampleAppGL.cpp  TKAppContextGL.cpp  TKSampleAppGL.cpp
TransferKittyAndroid/app/src/main/cpp/gameworks/src/main/cpp/gameworks/src/NvAppBase/glfw/: NvGLFWContext.h
TransferKittyAndroid/app/src/main/cpp/gameworks/src/main/cpp/gameworks/src/NvAppBase/java/com/nvidia/NvAppBase/: NvAppBase.java
TransferKittyAndroid/app/src/main/cpp/gameworks/src/main/cpp/gameworks/src/NvAppBase/linux/: NvThreadPosix.cpp  NvThreadPosix.h
TransferKittyAndroid/app/src/main/cpp/gameworks/src/main/cpp/gameworks/src/NvAppBase/win/: MainWin32.cpp  NvThreadWin.cpp
TransferKittyAndroid/app/src/main/cpp/gameworks/src/main/cpp/gameworks/src/NvGLUtils/: NvLogsGL.cpp
TransferKittyAndroid/app/src/main/cpp/gameworks/src/main/cpp/gameworks/src/NvImage/: NvFilePtr.h
TransferKittyAndroid/app/src/main/cpp/gameworks/src/main/cpp/gameworks/src/NvVkUtil/: NvAppWrapperContextVK.cpp  NvSampleAppVK.cpp
TransferKittyAndroid/app/src/main/cpp/nuklear/: nuklear.h
TransferKittyReactNative/: App.tsx  CatenaShare.tsx  app.json  package.json  share.ios.js
(+110 files in other folders)
